fix z-index tip modal issue

--- a/css/_tip-button.scss
+++ b/css/_tip-button.scss
@@ -78,7 +78,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1050;
+    z-index: 9000;
     opacity: 1;
     margin: 0;
     padding: 0;
